[gd_scene load_steps=7 format=2]

[ext_resource path="res://accueil_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/accueil_menu/label_titre.png" type="Texture" id=2]
[ext_resource path="res://assets/accueil_menu/label_new.png" type="Texture" id=3]
[ext_resource path="res://assets/accueil_menu/label_historique.png" type="Texture" id=4]
[ext_resource path="res://assets/accueil_menu/label_options.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 760.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 720.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect_title" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 720.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="new_btn" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 365.0
margin_bottom = 44.0
size_flags_horizontal = 0
texture_normal = ExtResource( 3 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 720.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 30 )

[node name="history_btn" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
material = SubResource( 1 )
margin_top = 82.0
margin_right = 227.0
margin_bottom = 130.0
size_flags_horizontal = 2
texture_normal = ExtResource( 4 )

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 720.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 30 )

[node name="options_btn" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 167.0
margin_bottom = 217.0
size_flags_horizontal = 0
texture_normal = ExtResource( 5 )
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/new_btn" to="." method="_on_new_btn_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/new_btn" to="." method="_on_new_btn_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/new_btn" to="." method="_on_new_btn_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/history_btn" to="." method="_on_history_btn_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/history_btn" to="." method="_on_history_btn_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/options_btn" to="." method="_on_options_btn_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/options_btn" to="." method="_on_options_btn_mouse_exited"]
